# VidelizerAI

./: .gitignore  QUICK_START.md  README.md  Readme.md  SETUP.md  asset-manifest.json  check_status.py  docker-compose-transcription.yml  docker-compose.yml  index.html  mvp-plan.md  start.sh  start_frontend.sh  test_api.py
Transcription/: .gitignore  Dockerfile  docker-compose.yml  main.py  requirements.txt  transcribe.py
Transcription/app/: main.py  manual-install.md  requirements.txt
backend/Anal/: check_openai.py  crud.py  db.json  db.py  gpt_structurer.py  main.py  models.py  pyproject.toml
backend/Analise/: .db.json  Dockerfile  main.py  pyproject.toml
backend/Analise/db/: transcripts.json
backend/Analise/static/: index.html
backend/Transcription/: Dockerfile
backend/Transcription/app/: main.py  pyproject.toml
documentation/: detailed-architecture.md  project-arch.drawio  queue-analysis.md  team-development-plan.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/AnalysisResults/: AnalysisResults.tsx
frontend/src/components/LoadingSpinner/: LoadingSpinner.tsx
frontend/src/components/VideoUpload/: VideoUpload.tsx
frontend/src/pages/: ResultsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts  fileUpload.ts
frontend/src/types/: index.ts
static/css/: main.c706682d.css  main.c706682d.css.map
static/js/: main.d13c67fc.js  main.d13c67fc.js.map
