[project]
name = "anal-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Developer",email = "developer@company.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "loguru (>=0.7.3,<0.8.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.35.0"

