[tool.poetry]
name = "videlizerai-transcription"
version = "0.1.0"
description = "FastAPI + Whisper transcription backend"
authors = ["Developer <developer@company.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
openai-whisper = { git = "https://github.com/openai/whisper.git" }
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
